Posodobobitev vsega.
